--- a/initramfs/recovery.rc
+++ b/initramfs/recovery.rc
@@ -119,33 +119,31 @@ loglevel 9
     mkdir /system
     # Mount /system rw first to give the filesystem a chance to save a checkpoint
     # mount yaffs2 mtd@system /system 
-    #mount ext4 /dev/block/stl9 /system noatime nodiratime errors=continue nobh data=writeback barrier=0 noauto_da_alloc
-    #mount ext2 /dev/block/stl9 /system ro noatime nodiratime nodev
-    mount ext4 /dev/block/stl9 /system noatime nodiratime errors=continue nobh data=writeback barrier=0 noauto_da_alloc
+    mount ext4 /dev/block/stl9 /system wait nosuid nodev noatime nodiratime noauto_da_alloc
 
 # DATA
     # We chown/chmod /data again so because mount is run as root + defaults
     # mount yaffs2 mtd@userdata /data nosuid nodev
     exec apply_disk_policy
     mkdir /data 0771 system system
-    #mount ext4 /dev/block/mmcblk0p2 /data nosuid nodev noatime nodiratime errors=continue nobh data=writeback barrier=0 noauto_da_alloc
-    mount rfs /dev/block/mmcblk0p2 /data nosuid nodev check=no
+    mount ext4 /dev/block/mmcblk0p2 /data  wait nosuid nodev noatime nodiratime noauto_da_alloc
+    #mount rfs /dev/block/mmcblk0p2 /data nosuid nodev check=no
     chown system system /data
     chmod 0771 /data
 
 # DBDATA
     mkdir /dbdata
-    #mount ext4 /dev/block/stl10 /dbdata nosuid nodev noatime nodiratime errors=continue nobh data=writeback barrier=0 noauto_da_alloc
-    mount rfs /dev/block/stl10 /dbdata nosuid nodev check=no
+    mount ext4 /dev/block/stl10 /dbdata wait nosuid nodev noatime nodiratime noauto_da_alloc
+    #mount rfs /dev/block/stl10 /dbdata nosuid nodev check=no
     chown system system /dbdata
     chmod 0771 /dbdata
     chmod 0771 /dbdata
     mkdir /dbdata/databases
     chown system system /dbdata/databases
-    chmod 0777 /dbdata/databases   
+    chmod 0777 /dbdata/databases
     mkdir /dbdata/system
     chown system system /dbdata/system
-    chmod 0775 /dbdata/system  
+    chmod 0775 /dbdata/system
 
     # Create dump dir and collect dumps.
     # Do this before we mount cache so eventually we can use cache for
@@ -168,7 +166,6 @@ loglevel 9
 
 # CACHE
     mkdir /cache 0771 system cache
-    #mount yaffs2 mtd@cache /cache nosuid nodev
     #mount ext4 /dev/block/stl11 /cache nosuid nodev noatime nodiratime errors=continue nobh data=writeback barrier=0 noauto_da_alloc
     mount rfs /dev/block/stl11 /cache nosuid nodev check=no
     chown system cache /cache
