--- a/initramfs/init.rc
+++ b/initramfs/init.rc
@@ -31,18 +31,21 @@ loglevel 9
 
 # other modules
     insmod /lib/modules/vibrator.ko
-    insmod /lib/modules/storage.ko
     insmod /lib/modules/fsr.ko
     insmod /lib/modules/fsr_stl.ko
     insmod /lib/modules/rfs_glue.ko
     insmod /lib/modules/rfs_fat.ko
+
     insmod /lib/modules/onedram.ko
     insmod /lib/modules/svnet.ko
     insmod /lib/modules/modemctl.ko
+    insmod /lib/modules/storage.ko
     insmod /lib/modules/bthid.ko
 
-# Backward compatibility
+# Backwards Compat - XXX: Going away in G*
     symlink /system/etc /etc
+    symlink /mnt/sdcard /sdcard
+    symlink /mnt/emmc /emmc
     symlink /sys/kernel/debug /d
 
 # Interface for Wifi
@@ -57,7 +60,6 @@ loglevel 9
     mkdir /acct
     mount cgroup none /acct cpuacct
     mkdir /acct/uid
-    
 
 # parameter block
 # LFS
