--- a/initramfs/recovery.rc
+++ b/initramfs/recovery.rc
@@ -462,7 +462,7 @@ service recovery /sbin/recovery
 
 # adbd is controlled by the persist.service.adb.enable system property
 service adbd /sbin/adbd recovery
-    enabled
+    disabled
 
 on property:persist.service.adb.enable=1
     start adbd
