--- a/initramfs/ueventd.rc
+++ b/initramfs/ueventd.rc
@@ -7,6 +7,7 @@
 /dev/urandom              0666   root       root
 /dev/ashmem               0666   root       root
 /dev/binder               0666   root       root
+/dev/usb_mtp_gadget       0666   root       root
 
 # logger should be world writable (for logging) but not readable
 /dev/log/*                0662   root       log
