--- a/initramfs/init.rc
+++ b/initramfs/init.rc
@@ -495,7 +495,7 @@ service wpa_supplicant /system/bin/wpa_supplicant -Dwext -ieth0 -c/data/misc/wif
     disabled
     oneshot
 
-service dhcpcd /system/bin/dhcpcd -ABLK eth0
+service dhcpcd_eth0 /system/bin/dhcpcd -ABLK eth0
     disabled
     oneshot
 
