--- a/initramfs/recovery.rc
+++ b/initramfs/recovery.rc
@@ -26,22 +26,14 @@ loglevel 9
     export TMPDIR /data/local/tmp
     export TERMINFO /system/etc/terminfo
 
-# ko files for 3D
-    insmod /modules/pvrsrvkm.ko
-    insmod /modules/s3c_lcd.ko
-    insmod /modules/s3c_bc.ko
-
-# other modules
+    insmod /lib/modules/jbd2.ko
+    insmod /lib/modules/ext4.ko
     insmod /lib/modules/vibrator.ko
-    insmod /lib/modules/storage.ko
     insmod /lib/modules/fsr.ko
     insmod /lib/modules/fsr_stl.ko
     insmod /lib/modules/rfs_glue.ko
     insmod /lib/modules/rfs_fat.ko
-    insmod /lib/modules/onedram.ko
-    insmod /lib/modules/svnet.ko
-    insmod /lib/modules/modemctl.ko
-    insmod /lib/modules/bthid.ko
+    insmod /lib/modules/storage.ko
 
     mkdir /tmp
     mount tmpfs nodev /tmp
