--- a/initramfs/lpm.rc
+++ b/initramfs/lpm.rc
@@ -17,10 +17,13 @@ on init
 	mkdir /tmp
 	mount tmpfs nodev /tmp
 
+	insmod /lib/modules/jbd2.ko
+	insmod /lib/modules/ext4.ko
 	insmod /lib/modules/fsr.ko
 	insmod /lib/modules/fsr_stl.ko
 	insmod /lib/modules/rfs_glue.ko
 	insmod /lib/modules/rfs_fat.ko
+	insmod /lib/modules/storage.ko
 	mkdir /mnt 0775 root system
 	mkdir /mnt/.lfs 0755 root root
 	insmod /lib/modules/j4fs.ko
