--- a/initramfs/lpm.rc
+++ b/initramfs/lpm.rc
@@ -17,8 +17,7 @@ on init
 	mkdir /tmp
 	mount tmpfs nodev /tmp
 
-	insmod /lib/modules/jbd2.ko
-	insmod /lib/modules/ext4.ko
+	insmod /lib/modules/vibrator.ko
 	insmod /lib/modules/fsr.ko
 	insmod /lib/modules/fsr_stl.ko
 	insmod /lib/modules/rfs_glue.ko
@@ -31,7 +30,7 @@ on init
 	insmod /lib/modules/param.ko 
 
 	mount ext4 /dev/block/stl9 /system wait nodev noatime nodiratime noauto_da_alloc
-	mount ext4 /dev/block/mmcblk0p2 /data  wait nosuid nodev noatime nodiratime noauto_da_alloc
+	mount ext4 /dev/block/mmcblk0p2 /data wait nosuid nodev noatime nodiratime noauto_da_alloc
 
 	mkdir /data/log 0777
 	mkdir /data/anr 0777
