--- a/initramfs/init.rc
+++ b/initramfs/init.rc
@@ -432,7 +432,11 @@ service pvrsrvinit /system/bin/pvrsrvinit
    user root
    group root
    oneshot
- 
+
+service tvout /system/bin/tvoutserver
+     user system
+     group graphics
+
 service servicemanager /system/bin/servicemanager
     user system
     critical
