fix mounting of /datadata, enable tablet hacks, fix setup_fs so it doesnt fail on non-links
Change-Id: Ica7a163f72777df988e2fc23891aa39c326a4617

--- a/initramfs/recovery.rc
+++ b/initramfs/recovery.rc
@@ -126,7 +126,7 @@ loglevel 9
 
 # DBDATA
     mkdir /datadata
-    mount ext4 /dev/block/stl10 /dbdata wait nosuid nodev noatime nodiratime noauto_da_alloc
+    mount ext4 /dev/block/stl10 /datadata wait nosuid nodev noatime nodiratime noauto_da_alloc
     chown system system /datadata
     chmod 0771 /datadata
     mkdir /datadata/databases
