add iprenew service
Change-Id: I9cc333835a88c0262ff02b5e230f55ef2380ea41

--- a/initramfs/init.rc
+++ b/initramfs/init.rc
@@ -505,6 +505,10 @@ service dhcpcd_eth0 /system/bin/dhcpcd -ABLK eth0
     disabled
     oneshot
 
+service iprenew_eth0 /system/bin/dhcpcd -n
+    disabled
+    oneshot
+
 service ifcfg_eth0 /system/bin/ifconfig eth0 up
     disabled
     oneshot
