use liboverlay from aries-common because it supports pixelformats used by OMX libs
Change-Id: I54a244e84ce78437e46ad3ac934df08bf87d15e1

--- a/initramfs/ueventd.rc
+++ b/initramfs/ueventd.rc
@@ -85,7 +85,7 @@
 /dev/video22              0660   system     system
 
 # sound
-/dev/pmem_adsp            0660   system     audio
+/dev/pmem_adsp*           0660   system     audio
 /dev/snd/*                0666   system     audio
 
 /dev/modem_ctl            0660   radio      radio
