--- a/initramfs/init.rc
+++ b/initramfs/init.rc
@@ -32,7 +32,6 @@ loglevel 9
     insmod /lib/modules/rfs_glue.ko
     insmod /lib/modules/rfs_fat.ko
     insmod /lib/modules/storage.ko
-    insmod /lib/modules/bthid.ko
 
 # Backwards Compat - XXX: Going away in G*
     symlink /system/etc /etc
@@ -115,11 +114,10 @@ loglevel 9
     #mount ext2 /dev/block/stl9 /system ro noatime nodiratime nodev
     mount ext4 /dev/block/stl9 /system wait nodev noatime nodiratime noauto_da_alloc
 
-    insmod /system/lib/modules/2.6.35.7/ansi_cprng.ko
-    insmod /system/lib/modules/2.6.35.7/bthid.ko
+    insmod /lib/modules/ansi_cprng.ko
+    insmod /lib/modules/bthid.ko
+    insmod /lib/modules/scsi_wait_scan.ko
     insmod /system/lib/modules/2.6.35.7/cifs.ko
-    insmod /system/lib/modules/2.6.35.7/slow-work.ko
-    insmod /system/lib/modules/2.6.35.7/scsi_wait_scan.ko
 
 # DATA
     # We chown/chmod /data again so because mount is run as root + defaults
