--- a/initramfs/init.rc
+++ b/initramfs/init.rc
@@ -525,7 +525,7 @@ service dbus /system/bin/dbus-daemon --system --nofork
     user root
     group root net_bt_admin
 
-service hciattach /system/bin/brcm_patchram_plus -d --enable_hci --baudrate 3000000 --patchram /system/bin/BCM4329B1_002.002.023.0534.0590.hcd /dev/s3c2410_serial0
+service hciattach /system/bin/brcm_patchram_plus --enable_hci --pcm_role slave --baudrate 921600 --patchram /system/bin/BCM4329B1_002.002.023.0534.0590.hcd /dev/s3c2410_serial0
     user bluetooth
     group bluetooth net_bt_admin
     disabled
@@ -561,17 +561,15 @@ service pbap /system/bin/sdptool add --channel=19 PBAP
     disabled
     oneshot
 
+#END: BLUETOOTH
+
 service installd /system/bin/installd
     socket installd stream 600 system system
 
-#END: BLUETOOTH
-
-# akmd service
-# FIXME start it always for now
-service akmd /system/bin/akmd 0 0
-    user compass
-    group compass misc input
-    disabled
+#service akmd /system/bin/akmd 0 0
+#    user compass
+#    group compass misc input
+#    disabled
 
 service racoon /system/bin/racoon
     socket racoon stream 600 system system
