remove duplicate libs, changes for CDMA tab
Change-Id: I976270a53768e65452da224ac426ab019ba3ed95

--- a/initramfs/recovery.rc
+++ b/initramfs/recovery.rc
@@ -61,6 +61,7 @@ loglevel 9
     insmod /lib/modules/j4fs.ko
     mount j4fs /dev/block/stl6 /mnt/.lfs
     insmod /lib/modules/param.ko
+    insmod /lib/modules/dpram_recovery.ko
 
     mkdir /mnt/obb 0700 root system
     mount tmpfs tmpfs /mnt/obb mode=0755,gid=1000
