--- a/initramfs/init.rc
+++ b/initramfs/init.rc
@@ -58,6 +58,7 @@ loglevel 9
     insmod /lib/modules/j4fs.ko
     mount j4fs /dev/block/stl6 /mnt/.lfs
     insmod /lib/modules/param.ko
+    insmod /lib/modules/dpram_vzw.ko
 
     mkdir /mnt/obb 0700 root system
     mount tmpfs tmpfs /mnt/obb mode=0755,gid=1000
@@ -468,15 +469,24 @@ service dnsmasq /system/bin/logwrapper /system/bin/dnsmasq -d
 
 service debuggerd /system/bin/debuggerd
 
-service ril-daemon /system/bin/rild -l /system/lib/libsec-ril.so -- -d /dev/ttyS0
+service ril-daemon /system/bin/rild
     socket rild stream 660 root radio
     socket rild-debug stream 660 radio system
     user root
-    group radio cache inet misc audio
+    group radio cache inet misc audio sdcard_rw log
 
-service gpsd /system/bin/gpsd -c /system/etc/gps.xml
-    socket gps seqpacket 0660 gps system
-    user gps
+service pppd_cdma /system/bin/pppd_runner
+   user root
+   group radio cache inet misc system
+   disabled
+   oneshot
+
+service DR-deamon /system/bin/drexe
+    user root
+    group system radio inet net_raw
+
+service gps-daemon /system/bin/gpsd
+    user system
     group system inet
 
 service zygote /system/bin/app_process -Xzygote /system/bin --zygote --start-system-server
