--- a/initramfs/init.rc
+++ b/initramfs/init.rc
@@ -579,6 +579,12 @@ service dumpstate /system/bin/dumpstate -s
     disabled
     oneshot
 
+on property:ril.cdma.data_ready=true
+    start pppd_cdma
+
+on property:ril.cdma.data_ready=false
+    stop pppd_cdma
+
 # Clean reboot
 service reboot /system/xbin/shutdown -r
     disabled
