--- a/initramfs/init.rc
+++ b/initramfs/init.rc
@@ -10,21 +10,23 @@ sysclktz 0
 loglevel 9
 
 # setup the global environment
-    export PATH /sbin:/system/sbin:/bin:/system/bin:/system/xbin
-    export LD_LIBRARY_PATH /system/lib
+    export PATH /sbin:/vendor/bin:/system/sbin:/system/bin:/system/xbin
+    export LD_LIBRARY_PATH /vendor/lib:/system/lib
     export ANDROID_BOOTLOGO 1
     export ANDROID_CACHE /cache
     export ANDROID_ROOT /system
     export ANDROID_ASSETS /system/app
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /mnt/sdcard
+    export PHONE_STORAGE /mnt/emmc
     export ASEC_MOUNTPOINT /mnt/asec
+    export LOOP_MOUNTPOINT /mnt/obb
     export SD_EXT_DIRECTORY /sd-ext
     export BOOTCLASSPATH /system/framework/core.jar:/system/framework/bouncycastle.jar:/system/framework/ext.jar:/system/framework/framework.jar:/system/framework/android.policy.jar:/system/framework/services.jar:/system/framework/core-junit.jar
-    export LOOP_MOUNTPOINT /mnt/obb 
     export TMPDIR /data/local/tmp
     export TERMINFO /system/etc/terminfo
 
+    # kernel modules
     insmod /lib/modules/vibrator.ko
     insmod /lib/modules/fsr.ko
     insmod /lib/modules/fsr_stl.ko
@@ -32,14 +34,15 @@ loglevel 9
     insmod /lib/modules/rfs_fat.ko
     insmod /lib/modules/storage.ko
 
-# Backwards Compat - XXX: Going away in G*
-    symlink /system/etc /etc
-    symlink /mnt/sdcard /sdcard
-    symlink /mnt/emmc /emmc
+# Backward compatibility
     symlink /sys/kernel/debug /d
 
 # Interface for Wifi
     setprop wifi.interface "eth0"
+
+# Right now vendor lives on the same filesystem as system,
+# but someday that may change.
+    symlink /system/vendor /vendor
 
 # create mountpoints
     mkdir /mnt 0775 root system
@@ -50,6 +53,11 @@ loglevel 9
     mkdir /acct
     mount cgroup none /acct cpuacct
     mkdir /acct/uid
+    mkdir /system
+    mkdir /data 0771 system system
+    mkdir /dbdata 0771 system system
+    mkdir /cache 0771 system cache
+    mkdir /config 0500 root root
 
 # parameter block
 # LFS
@@ -58,11 +66,6 @@ loglevel 9
     mount j4fs /dev/block/stl6 /mnt/.lfs
     insmod /lib/modules/param.ko
     insmod /lib/modules/dpram_vzw.ko
-
-    mkdir /mnt/obb 0700 root system
-    mount tmpfs tmpfs /mnt/obb mode=0755,gid=1000
-
-    mkdir /config 0500 root root
 
     # Directory for putting things only root should see.
     mkdir /mnt/secure 0700 root root
@@ -77,6 +80,10 @@ loglevel 9
     # Secure container public mount points.
     mkdir /mnt/asec  0700 root system
     mount tmpfs tmpfs /mnt/asec mode=0755,gid=1000
+
+    # Filesystem image public mount points.
+    mkdir /mnt/obb 0700 root system
+    mount tmpfs tmpfs /mnt/obb mode=0755,gid=1000
 
     mkdir /sd-ext 0771 system system
 
@@ -107,163 +114,10 @@ loglevel 9
     # 5.0 %
     write /dev/cpuctl/bg_non_interactive/cpu.shares 52
 
-# SYSTEM
-    mkdir /system
+on fs
+# mount mtd partitions
     # Mount /system rw first to give the filesystem a chance to save a checkpoint
-    # mount yaffs2 mtd@system /system 
-    #mount ext2 /dev/block/stl9 /system ro noatime nodiratime nodev
     mount ext4 /dev/block/stl9 /system wait nodev noatime nodiratime noauto_da_alloc
-
-    insmod /lib/modules/ansi_cprng.ko
-    insmod /lib/modules/bthid.ko
-    insmod /lib/modules/scsi_wait_scan.ko
-    insmod /system/lib/modules/2.6.35.7/cifs.ko
-    insmod /system/lib/modules/2.6.35.7/hotspot_event_monitoring.ko
-
-# DATA
-    # We chown/chmod /data again so because mount is run as root + defaults
-    # mount yaffs2 mtd@userdata /data nosuid nodev
-    mkdir /data 0771 system system
-    mount ext4 /dev/block/mmcblk0p2 /data  wait nosuid nodev noatime nodiratime noauto_da_alloc
-    #mount rfs /dev/block/mmcblk0p2 /data nosuid nodev check=no
-    chown system system /data
-    chmod 0771 /data
-
-# DBDATA
-    mkdir /dbdata
-    mount ext4 /dev/block/stl10 /dbdata  wait nosuid nodev noatime nodiratime noauto_da_alloc
-    #mount rfs /dev/block/stl10 /dbdata nosuid nodev check=no
-    chown system system /dbdata
-    chmod 0771 /dbdata
-    chmod 0771 /dbdata
-    mkdir /dbdata/databases
-    chown system system /dbdata/databases
-    chmod 0777 /dbdata/databases
-    mkdir /dbdata/system
-    chown system system /dbdata/system
-    chmod 0775 /dbdata/system
-
-    # Create dump dir and collect dumps.
-    # Do this before we mount cache so eventually we can use cache for
-    # storing dumps on platforms which do not have a dedicated dump partition.
-
-    mkdir /data/dontpanic
-    chown root log /data/dontpanic
-    chmod 0750 /data/dontpanic
-
-    # Collect apanic data, free resources and re-arm trigger
-    copy /proc/apanic_console /data/dontpanic/apanic_console
-    chown root log /data/dontpanic/apanic_console
-    chmod 0640 /data/dontpanic/apanic_console
-
-    copy /proc/apanic_threads /data/dontpanic/apanic_threads
-    chown root log /data/dontpanic/apanic_threads
-    chmod 0640 /data/dontpanic/apanic_threads
-
-    write /proc/apanic_console 1
-
-# CACHE
-    mkdir /cache 0771 system cache
-    #mount yaffs2 mtd@cache /cache nosuid nodev
-    mount ext4 /dev/block/mmcblk0p1 /cache nosuid nodev noatime nodiratime errors=continue nobh data=writeback barrier=0 noauto_da_alloc
-    #mount rfs /dev/block/stl11 /cache nosuid nodev check=no
-    chown system cache /cache
-    chmod 0771 /cache
-
-    # This may have been created by the recovery system with odd permissions
-    chown system cache /cache/recovery
-    chmod 0770 /cache/recovery
-
-#change permissions on vmallocinfo so we can grab it from bugreports
-    chown root log /proc/vmallocinfo
-    chmod 0440 /proc/vmallocinfo
-
-#change permissions on kmsg & sysrq-trigger so bugreports can grab kthread stacks
-    chown root system /proc/kmsg
-    chmod 0440 /proc/kmsg
-    chown root system /proc/sysrq-trigger
-    chmod 0220 /proc/sysrq-trigger
-
-
-# create data/gps for GPS demon
-    mkdir /data/gps 700 gps system
-    chown gps system /data/gps
-    chown gps root /sys/class/sec/gps/GPS_PWR_EN/value
-    chmod 660 /sys/class/sec/gps/GPS_PWR_EN/value
-    chown gps root /sys/class/sec/gps/GPS_nRST/value
-    chmod 660 /sys/class/sec/gps/GPS_nRST/value
-    chown gps system /dev/s3c2410_serial1
-    chmod 600 /dev/s3c2410_serial1
-
-# what are these for? they dont seem to exist
-    chown root system /sys/class/gpio/gpio121/value
-    chmod 664 /sys/class/gpio/gpio121/value
-    chown root system /sys/class/gpio/gpio120/value
-    chmod 664 /sys/class/gpio/gpio120/value
-
-
-# create basic filesystem structure
-    mkdir /data/misc 01771 system misc
-    mkdir /data/misc/bluetoothd 0770 bluetooth bluetooth
-    mkdir /data/misc/bluetooth 0770 system system
-    mkdir /data/misc/keystore 0700 keystore keystore
-    mkdir /data/misc/vpn 0770 system system
-    mkdir /data/misc/systemkeys 0700 system system
-    mkdir /data/misc/vpn/profiles 0770 system system
-    mkdir /data/misc/radio 0771 radio radio
-
-    mkdir /data/misc/wifi 0770 wifi wifi
-    chmod 0770 /data/misc/wifi
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
-
-    mkdir /data/misc/dhcp 0770 dhcp dhcp
-    mkdir /data/wifi 0770 wifi wifi
-    mkdir /data/local 0771 shell shell
-    mkdir /data/local/tmp 0771 shell shell
-    mkdir /data/data 0771 system system
-    mkdir /data/app-private 0771 system system
-    mkdir /data/app 0771 system system
-    mkdir /data/property 0700 root root
-
-    # create log system 
-    mkdir /data/log 0777 root root
-    chmod 0777 /data/log
-    chmod 0777 /data/anr
-
-    chmod 0662 /dev/log/radio
-    chmod 0662 /dev/log/main
-    chmod 0662 /dev/log/event
-
-    # create dalvik-cache and double-check the perms
-    mkdir /data/dalvik-cache 0771 system system
-    chown system system /data/dalvik-cache
-    chmod 0771 /data/dalvik-cache
-
-    mkdir /cache/dalvik-cache 0771 system system
-    chown system system /cache/dalvik-cache
-    chmod 0771 /cache/dalvik-cache
-
-# use dbdata partition for /cache/dalvik-cache
-# because stl11 is too small
-    #mkdir /dbdata/dalvik-cache
-    #chown system system /dbdata/dalvik-cache
-    #chmod 0771 /dbdata/dalvik-cache
-    #symlink /dbdata/dalvik-cache /cache/dalvik-cache
-
-    # create the lost+found directories, so as to enforce our permissions
-    mkdir /data/lost+found 0770
-    mkdir /cache/lost+found 0770
-
-    # double check the perms, in case lost+found already exists, and set owner
-    chown root root /data/lost+found
-    chmod 0770 /data/lost+found
-    chown root root /cache/lost+found
-    chmod 0770 /cache/lost+found
-
-    # allow net_raw to have access to /dev/socket directory
-    chown root net_raw /dev/socket
-    chmod 0775 /dev/socket
 
 on boot
 # basic network init
@@ -278,7 +132,7 @@ on boot
     write /sys/devices/virtual/net/rmnet0/timeout_suspend 5000000
 
 # Define the oom_adj values for the classes of processes that can be
-# killed by the kernel. These are used in ActivityManagerService.
+# killed by the kernel.  These are used in ActivityManagerService.
     setprop ro.FOREGROUND_APP_ADJ 0
     setprop ro.VISIBLE_APP_ADJ 1
     setprop ro.PERCEPTIBLE_APP_ADJ 2
@@ -290,7 +144,7 @@ on boot
     setprop ro.EMPTY_APP_ADJ 15
 
 # Define the memory thresholds at which the above process classes will
-# be killed. These numbers are in pages (4k).
+# be killed.  These numbers are in pages (4k).
     setprop ro.FOREGROUND_APP_MEM 2048
     setprop ro.VISIBLE_APP_MEM 3072
     setprop ro.PERCEPTIBLE_APP_MEM 4096
@@ -301,23 +155,29 @@ on boot
     setprop ro.HIDDEN_APP_MEM 7168
     setprop ro.EMPTY_APP_MEM 8192
 
-    setprop ro.bt.bdaddr_path "/data/misc/bluetooth/bt_addr"
-
 # Write value must be consistent with the above properties.
-# Note that the driver only supports 6 slots, so we have HOME_APP at the
-# same memory level as services.
-    write /sys/module/lowmemorykiller/parameters/adj 0,1,2,7,14,15
+# Note that the driver only supports 6 slots, so we have combined some of
+# the classes into the same memory level; the associated processes of higher
+# classes will still be killed first.
+    write /sys/module/lowmemorykiller/parameters/adj 0,1,2,4,7,15
 
     write /proc/sys/vm/overcommit_memory 1
     write /proc/sys/vm/min_free_order_shift 4
-    write /sys/module/lowmemorykiller/parameters/minfree 1536,2048,4096,5120,5632,6144
+    write /sys/module/lowmemorykiller/parameters/minfree 2048,3072,4096,6144,7168,8192
 
     # Set init its forked children's oom_adj.
     write /proc/1/oom_adj -16
 
     # Tweak background writeout
-    write /proc/sys/vm/dirty_expire_centisecs 200
+    write /proc/sys/vm/dirty_writeback_centisecs 2000
+    write /proc/sys/vm/dirty_expire_centisecs 1000
+    write /proc/sys/vm/dirty_ratio 90
     write /proc/sys/vm/dirty_background_ratio  5
+
+    write /sys/class/block/mmcblk0/queue/iosched/low_latency 0
+    write /sys/class/block/mmcblk1/queue/iosched/low_latency 0
+    write /sys/class/block/stl10/queue/iosched/low_latency 0
+    write /sys/class/block/stl9/queue/iosched/low_latency 0
 
     # Permissions
     chmod 666 /system/usr/keychars/s3c-keypad.kcm.bin
@@ -360,7 +220,6 @@ on boot
     chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
 
-
 # Define TCP buffer sizes for various networks
 #   ReadMin, ReadInitial, ReadMax, WriteMin, WriteInitial, WriteMax,
     setprop net.tcp.buffersize.default 4096,87380,110208,4096,16384,110208
@@ -369,40 +228,12 @@ on boot
     setprop net.tcp.buffersize.edge    4093,26280,35040,4096,16384,35040
     setprop net.tcp.buffersize.gprs    4092,8760,11680,4096,8760,11680
 
-# Include extra init file
-    import /system/etc/init.local.rc
-
-    write /sys/class/block/mmcblk0/queue/iosched/low_latency 0
-    write /sys/class/block/mmcblk1/queue/iosched/low_latency 0
-    write /sys/class/block/stl10/queue/iosched/low_latency 0
-    write /sys/class/block/stl9/queue/iosched/low_latency 0
-
-# +++++++++++++++++++++++++++++++++++++++++++
-# for Bluetooth
-    chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
-    chown bluetooth bluetooth /proc/bluetooth/sleep/proto
-    chown system system /sys/module/sco/parameters/disable_esco
-    chmod 0660 /sys/module/bluetooth_power/parameters/power
-    chmod 0660 /proc/bluetooth/sleep/proto
-
-    chmod 0777 /sys/class/rfkill/rfkill0/state
-    chmod 0777 /sys/class/rfkill/rfkill1/state
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill1/type
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill1/state
-
-    chmod 6771 /system/bin/brcm_dutMode
-
     class_start default
 
 ## Daemon processes to be run by init.
 ##
 service ueventd /sbin/ueventd
     critical
-
-service console /system/bin/sh
-    console
 
 # adbd is controlled by the persist.service.adb.enable system property
 service adbd /sbin/adbd
@@ -418,174 +249,3 @@ on property:persist.service.adb.enable=1
 on property:persist.service.adb.enable=0
     stop adbd
 
-# Execute files in /system/etc/init.d
-service sysinit /system/bin/logwrapper /system/xbin/busybox run-parts /system/etc/init.d
-    oneshot
-
-# create filesystems if necessary
-service setup_fs /system/bin/setup_fs /dev/block/mmcblk0p2 /dev/block/stl10 /dev/block/mmcblk0p1
-    user root
-    group root
-    oneshot
-
-# 3D init
-service pvrsrvinit /system/bin/pvrsrvinit
-   user root
-   group root
-   oneshot
-
-service servicemanager /system/bin/servicemanager
-    user system
-    critical
-    onrestart restart zygote
-    onrestart restart media
-
-service vold /system/bin/vold
-    socket vold stream 0660 root mount
-    ioprio be 2
-
-service netd /system/bin/netd
-    socket netd stream 0660 root system
-    socket dnsproxyd stream 0660 root inet
-
-# for usb tethering
-service dnsmasq /system/bin/logwrapper /system/bin/dnsmasq -d
-    disabled
-
-service debuggerd /system/bin/debuggerd
-
-service ril-daemon /system/bin/rild
-    socket rild stream 660 root radio
-    socket rild-debug stream 660 radio system
-    user root
-    group radio cache inet misc audio sdcard_rw log
-
-service pppd_cdma /system/bin/pppd_runner
-   user root
-   group radio cache inet misc system
-   disabled
-   oneshot
-
-service gps-daemon /system/bin/gpsd
-    user system
-    group system inet
-
-service zygote /system/bin/app_process -Xzygote /system/bin --zygote --start-system-server
-    socket zygote stream 666
-    onrestart write /sys/android_power/request_state wake
-    onrestart write /sys/power/state on
-    onrestart restart media
-
-service media /system/bin/mediaserver
-    user media
-    group system audio camera graphics inet net_bt net_bt_admin net_raw
-    ioprio rt 4
-
-service bootanim /system/bin/bootanimation
-    user graphics
-    group graphics
-    disabled
-    oneshot
-
-# wifi
-service wpa_supplicant /system/bin/wpa_supplicant -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf
-    disabled
-    oneshot
-
-service dhcpcd_eth0 /system/bin/dhcpcd -ABLK eth0
-    disabled
-    oneshot
-
-service iprenew_eth0 /system/bin/dhcpcd -n
-    disabled
-    oneshot
-
-service ifcfg_eth0 /system/bin/ifconfig eth0 up
-    disabled
-    oneshot
-
-#START: BLUETOOTH
-service dbus /system/bin/dbus-daemon --system --nofork
-    socket dbus stream 660 bluetooth bluetooth
-    user root
-    group root net_bt_admin
-
-service hciattach /system/bin/brcm_patchram_plus --enable_hci --pcm_role slave --baudrate 3000000 --patchram /system/bin/BCM4329B1_002.002.023.0534.0590.hcd /dev/s3c2410_serial0
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-
-service bluetoothd /system/bin/logwrapper /system/bin/bluetoothd -n /system/etc/bluetooth/main.conf
-    socket bluetooth stream 660 bluetooth bluetooth
-    socket dbus_bluetooth stream 660 bluetooth bluetooth
-    user root
-    group bluetooth net_bt_admin misc
-    disabled
-
-service hfag /system/bin/sdptool add --channel=10 HFAG
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
-
-service hsag /system/bin/sdptool add --channel=11 HSAG
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
-
-service opush /system/bin/sdptool add --channel=12 OPUSH
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
-
-service pbap /system/bin/sdptool add --channel=19 PBAP
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
-
-#END: BLUETOOTH
-
-service installd /system/bin/installd
-    socket installd stream 600 system system
-
-service racoon /system/bin/racoon
-    socket racoon stream 600 system system
-    # racoon will setuid to vpn after getting necessary resources.
-    group net_admin
-    disabled
-    oneshot
-
-service mtpd /system/bin/mtpd
-    socket mtpd stream 600 system system
-    user vpn
-    group vpn net_admin net_raw
-    disabled
-    oneshot
-
-service keystore /system/bin/keystore /data/misc/keystore
-    user keystore
-    group keystore
-    socket keystore stream 666
-
-service tvout /system/bin/tvoutserver
-    user system
-    group system
-
-service dumpstate /system/bin/dumpstate -s
-    socket dumpstate stream 0660 shell log
-    disabled
-    oneshot
-
-on property:ril.cdma.data_ready=true
-    start pppd_cdma
-
-on property:ril.cdma.data_ready=false
-    stop pppd_cdma
-
-# Clean reboot
-service reboot /system/xbin/shutdown -r
-    disabled
-    oneshot
